--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -24,6 +24,26 @@ test notifications, subscriptions
 
 inspect all pu_permission_level
 
+more on screen explanation
+ (External users cannot view posts marked "Visible for internal usrs only")  	
+external users can't see other other external users
+
+don't allow delete of org if referenced by bugs
+
+don't allow a user who can't see other orgs to see other orgs in dropdowns
+
+queries are wrong
+
+changes queries, add new column
+
+in edit user page, use javascript, not trip to server, to change what shows in query dropdown?
+
+if external user who is segreated adds bug, have to do it for his own org
+he shouldn't even be able to see another project
+
+sql in auto subscribe is commented - test subscriptions first, then notifications
+ 
+
 -----------------------------------------------------------------------
 Version 2.6.7  12/01/2007
 -----------------------------------------------------------------------
