git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@36 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -5,7 +5,7 @@ Release notes:
 -----------------------------------------------------------------------
 
 -----------------------------------------------------------------------
-Version 2.6.8  12/xx/2007
+Version 2.6.8  12/07/2007
 -----------------------------------------------------------------------
 
 Upgrade your database for this version using the SQL here:
