--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -5,6 +5,16 @@ Release notes:
 -----------------------------------------------------------------------
 
 -----------------------------------------------------------------------
+Version 2.6.9  12/XX/2007
+-----------------------------------------------------------------------
+
+* flag stuff (don't forget to update upgrade.sql)
+update queries too.
+
+
+* field level permissions?
+
+-----------------------------------------------------------------------
 Version 2.6.8  12/07/2007
 -----------------------------------------------------------------------
 
