git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@40 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -8,8 +8,8 @@ Release notes:
 Version 2.6.9  12/XX/2007
 -----------------------------------------------------------------------
 
-* flag stuff (don't forget to update upgrade.sql)
-update queries too.
+* flag stuff 
+
 
 
 * field level permissions?
