--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -6,12 +6,12 @@ Release notes:
 
 * Fixed bug with flags - added code so that flag.aspx doesn't cache.
 
+* excel export for reports
 
 * call mary brinton, jeremy, 
 * no single quotes in custom fields or values
 * same with project dorpdowns
 * better capture error in bug.aspx if query has sql err
-* excel export
 * test for apostrophe's
 * clone bug, new buttons there
 * more ajax-ee?
