git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@46 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -5,6 +5,7 @@ Release notes:
 -----------------------------------------------------------------------
 
 * Fixed bug with flags - added code so that flag.aspx doesn't cache.
+* Added cloning feature
 
 * excel export for reports
 
