git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@48 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -4,6 +4,12 @@ Release notes:
 -----------------------------------------------------------------------
 -----------------------------------------------------------------------
 
+* apostrophe's in dropdown values break search
+* NEED INSTRUCTIONS HOW TO UPGRADE 
+* no commas allowed in dropdown values too
+
+* filter counts
+
 * Fixed bug with flags - added code so that flag.aspx doesn't cache.
 * Added cloning feature
 
