--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -4,24 +4,20 @@ Release notes:
 -----------------------------------------------------------------------
 -----------------------------------------------------------------------
 
+* relationship parent/child
+* query counts
+* filter for flags
+* friendlier handling of errors in sql 
+
 * apostrophe's in dropdown values break search
 * NEED INSTRUCTIONS HOW TO UPGRADE 
 * no commas allowed in dropdown values too
 
-* filter counts
-
-* Fixed bug with flags - added code so that flag.aspx doesn't cache.
-* Added cloning feature
-
 * excel export for reports
 
-* call mary brinton, jeremy, 
-* no single quotes in custom fields or values
-* same with project dorpdowns
+* call jeremy, 
 * better capture error in bug.aspx if query has sql err
 * test for apostrophe's
-* clone bug, new buttons there
-* more ajax-ee?
 * more explicit settings to turn on and off projects, organizations
 * more tool tips
 * # of days in status
@@ -30,8 +26,30 @@ Release notes:
 * per project defaults
 * escalation/reminder
 * better bug grouping
-* LDAP?
 * bitnami
+
+
+-----------------------------------------------------------------------
+Version 2.7.0  12/21/2007
+-----------------------------------------------------------------------
+
+* Fixed bug - "or" logic in search page allowed people to see items
+in the list that they don't have permission to see.   The sql had been
+wrong, something like this:
+where has permission OR matches criteria 1 OR matches criteria 2
+The corrected SQL is something like this:
+where (has permission) AND (matches criteria 1 OR matches criteria 2)
+
+* Fixed bug in search screen - the "organization" dropdown was showing
+organizations even if the user didn't have permission to see them. Now,
+if the user doesn't have permissions to see other organizations, the
+dropdown isn't even shown.
+
+* Fixed bug with the flag feature - flag.aspx was caching.  Add logic to
+tell the browser not to cache flag.aspx.
+
+* Added new feature, "create copy".   It will create a copy of a bug,
+not including related posts.
 
 -----------------------------------------------------------------------
 Version 2.6.9  12/14/2007
