--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -4,24 +4,19 @@ Release notes:
 -----------------------------------------------------------------------
 -----------------------------------------------------------------------
 
-* Change org page
-* TEST copying bug when the fields being copied are not visible
-* TEST new db.
-* TEST upgrade of old db.
-
-
-* more links between features and rest of web
-* apostrophe's in dropdown values break search
 * NEED INSTRUCTIONS HOW TO UPGRADE 
-* no commas allowed in dropdown values too
-* excel export for reports
-* more explicit settings to turn on and off projects, organizations
-* more tool tips
-* # of days in status
-* deactivated users
-* per project defaults
-* escalation/reminder
+* use salt in encryption
+* # of days in status, the two queries the guy sent
 * Wordwrap, and take advantage of new api.
+
+* apostrophe's, commas, quotes in custom field names, values
+
+* excel export for reports
+* handle deactivated users better
+* per project defaults?
+* field level permissions for custom fields?
+* escalation/reminder
+
 
 -----------------------------------------------------------------------
 Version 2.7.3  1/19/2008
@@ -33,7 +28,8 @@ relevant part of the script against your database to upgrade.
 * Added field level permissions for the non-custom fields. As admin, 
 go to "organization" and see the field level permissions related to
 project, org, category, priority, assigned_to, status, and the
-user-defined-field.   No field level permissions on custom fields.
+user-defined-field.   No field level permissions on custom fields or
+project-specific custom fields.
 
 * Added the concept of parent/child to relationships between bugs.
 
