git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@66 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -4,8 +4,12 @@ Release notes:
 -----------------------------------------------------------------------
 -----------------------------------------------------------------------
 
+* info for axosfot, countersoft, 
+add info for elementool?  flyspray?
+
 * NEED INSTRUCTIONS HOW TO UPGRADE 
-* use salt in encryption
+* use salt in encryption, provide a way for ldap authentication to happen
+-- maybe move stuff to different folder for automatic compilation
 * # of days in status, the two queries the guy sent
 * Wordwrap, and take advantage of new api.
 
