git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@74 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -4,6 +4,10 @@ Release notes:
 -----------------------------------------------------------------------
 -----------------------------------------------------------------------
 
+* test notifications related to assigned user, status
+
+* fill user dropdown with valid users PLUS whoever bug is actually
+assigned to.
 
 * NEED INSTRUCTIONS HOW TO UPGRADE 
 
