--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -6,20 +6,14 @@ Release notes:
 
 * NEED INSTRUCTIONS HOW TO UPGRADE 
 
-* use salt in encryption, provide a way for ldap authentication to happen
--- maybe move stuff to different folder for automatic compilation
-
 * # of days in status, the two queries the guy sent
 
 * Wordwrap, and take advantage of new api.
-
 * apostrophe's, commas, quotes in custom field names, values
-
 * excel export for reports
-* handle deactivated users better
-* per project defaults?
 * field level permissions for custom fields?
 * escalation/reminder
+* automatic user creation, self registration
 
 
 -----------------------------------------------------------------------
